# makefoo

./: .mtn-ignore  .travis.yml  MANUAL.txt  Makefile  Makefile.in  NEWS.txt  README.md  README.txt  TODO.txt  amalgamation.mk  amalgamation.pre.mk  autoconf.mk  autoconf.reg.mk  autolib.mk  autolib.pre.mk  ci.sh  configure.ac  configure.sh  cppcheck.mk  cppcheck.post.mk  debug.mk  defs.mk  install-fhs.mk  int_helpers.mk  log.mk  log.sh  main.mk  makefoo.m4  makefoo.pc.in  native-gcc.mk  native-msvs.mk  native.mk  native.reg.mk  program.mk  rpm-spec-template.in  rpm.mk  rpm.reg.mk  sandbox  src-dist.mk  src-dist.post.mk  (+4 more)
tests/: configure_tests.sh  lib_simple_basic_test.sh  lib_simple_msvs_test.sh  program_simple_basic_test.sh  program_simple_cppcheck_test.sh  simple_autoconf_oos_build_test.sh  simple_autoconf_project_rpm_test.sh  test.sh  test_program_coverage_test.sh  test_program_test.sh  testlib.sh
tests/autoconf_project/: Makefile.in  baz.txt  configure.ac  libbar-config.in  libbar.pc.in
tests/autoconf_project/baz/: baz.cpp
tests/autoconf_project/libbar/: bar.cpp  bar.h  bar_ex.cpp  bar_test.cpp
tests/autoconf_project/libfoo/: spam.c
tests/lib_simple/: Makefile  lib.c  lib.h  prog.cpp
tests/program_simple/: Makefile  a.cpp  b.c
