#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([makefoo-autoconf-test],[0.0.1],[z.zagorski@gmail.com])
AC_CONFIG_AUX_DIR([../_autoconf_helpers/])
AC_CONFIG_SRCDIR([Makefile.in])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

